# db_api

./: .gitignore  Cargo.toml  README.md  README_old.md  SPECS.md  bitbucket-pipelines.yml  docker-compose.yml  postgresql.conf
db_api/: Cargo.toml
db_api/src/: database.rs  errors.rs  lib.rs  repository.rs  service.rs
db_api/src/mounter/: mod.rs  rocket.rs
db_api/src/responders/: mod.rs  rocket.rs
db_api/src/retriever/: actix.rs  mod.rs  rocket.rs
db_api/src/templates/: mod.rs  rest_template.rs
design/: database_accessors.md  parameters.md  pipelines.md  repositories.md  responses.md  routes.md  services.md
examples/: basic.rs  rocket.rs
rocket_example/: .env  Cargo.toml  Rocket.toml  out.rs  rocket_example.db
rocket_example/migrations/2019-10-28-104913_create_heroes/: down.sql  up.sql
rocket_example/src/: main.rs  models.rs  schema.rs
rocket_example/src/handlers/: body.rs  counter.rs  deser.rs  hero_count.rs  mod.rs  multiple_retrievers.rs  url_param.rs  void.rs
rocket_example/tools/: start_pg.sh
src/: database.rs  endpoint.rs  errors.rs  handler.rs  hooks.rs  lib.rs  mounter.rs  repository.rs  routes.rs  service.rs
src/endpoint/: mod.rs  rocket.rs
src/mounter/: mod.rs  rocket.rs  rocket_other.rs
src/retriever/: mod.rs  rocket.rs
