[package]
name = "db_api"
version = "0.1.0"
authors = ["Olivier Pinon <op@impero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1.18"
rocket = { version = "0.4.2", optional = true }

[features]
rocket_integ = ["rocket"]