[package]
name = "rocket_example"
version = "0.1.0"
authors = ["Olivier Pinon <op@impero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db_api = { path = "../db_api", features = ["rocket_integ"]}
diesel = "1.4.3"
serde = { version = "1.0.102", features = ["derive"]}
rocket = "0.4.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool"]